--- a/algemail.html
+++ b/algemail.html
@@ -28,9 +28,7 @@
                         <label for="textarea2">
                             To:
                         </label>
-                        <textarea id="textarea2" placeholder="">
-                            Dave Andersion &lt;daveand985@gmail.com&gt;
-                        </textarea>
+                        <textarea id="textarea2" placeholder="">Dave Anderson &lt;daveand985@gmail.com&gt;</textarea>
                     </fieldset>
                 </div>
                 <div data-role="fieldcontain" style="height: 70%">
