Enlarged input fileds in login.html

--- a/login.html
+++ b/login.html
@@ -9,6 +9,16 @@
         <link rel="stylesheet" href="login.css" />
         <style>
             /* App custom styles */
+            #textinput1, #textinput2 {
+                padding: 10px;
+                height: 60px;
+                font-size: 32px;
+            }
+
+           /* #textinput2 {
+                height: 60px;
+                font-size: 26px;
+            }*/
         </style>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
         </script>
