changes to login

--- a/login.html
+++ b/login.html
@@ -27,14 +27,14 @@
         <div data-role="page" id="login">
             <div data-role="content">
                 
-                <img src="images/logo.png" alt="image" style="position: absolute; top: 5%; left: 14%; #efefef;"/>
+                <img src="images/logo.png" alt="image" style="position: absolute; top: 5%; left: 12%; #efefef;"/>
                 
-                <div data-role="fieldcontain" style="position: absolute; top: 60%; left: 4%; width: 100%">
+                <div data-role="fieldcontain" style="position: absolute; top: 60%; left: 11%; width: 100%; padding: 10px;">
                     <fieldset data-role="controlgroup">
                         <input id="textinput1" placeholder="Username" value="" type="text" />
                     </fieldset>
                 </div>
-                <div data-role="fieldcontain" style="position: absolute; top: 70%; left: 4%; width: 100%">
+                <div data-role="fieldcontain" style="position: absolute; top: 70%; left: 11%; width: 100%; padding: 10px;">
                     <fieldset data-role="controlgroup">
                         <input id="textinput2" placeholder="Password" value="" type="password" />
                     </fieldset>
