--- a/andy-subjects.html
+++ b/andy-subjects.html
@@ -102,11 +102,12 @@
                 <div data-role="collapsible-set" data-theme="" data-content-theme="">
                     <div data-role="collapsible" data-collapsed="true">
                         <h3>
-                            Grade
+                            Overall Grade:  <em style="color:red">'C'</em>
                         </h3>
 						<p>
 							<ul data-role="listview">
-								<li>Overall Grade:  <em style="color:red">'C'</em></li>
+								<li>View Assignment Grade
+								</li>
 							</ul>
 						</p>
                     </div>
