--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <div data-role="page" id="login">
             <div data-role="content">
                 
-                <img src="images/logo.png" alt="image" style="position: absolute; top: 5%; left: 12%; #efefef;"/>
+                <img src="images/logo.png" alt="image" style="width: 30%; height: 30%; position: absolute; top: 5%; left: 12%; #efefef;"/>
                 
                 <div data-role="fieldcontain" style="position: absolute; top: 60%; left: 11%; width: 100%; padding: 10px;">
                     <fieldset data-role="controlgroup">
@@ -39,7 +39,7 @@
                         <input id="textinput2" placeholder="Password" value="" type="password" />
                     </fieldset>
                 </div>
-                <a href="#select" data-transition="slide" data-theme="b" data-icon="arrow-r" data-iconpos="right" data-role="button" style="position: absolute; top: 83%; left: 19%; width: 60%; height: 9%"><span style="font-size: 36px">Login</span></a>
+                <a href="#select" data-theme="b" data-icon="arrow-r" data-iconpos="right" data-role="button" style="position: absolute; top: 83%; left: 19%; width: 60%; height: 9%"><span style="font-size: 36px">Login</span></a>
             </div>
         </div>
 
@@ -291,32 +291,32 @@
                 <ul data-role="listview" data-divider-theme="b" data-inset="true">
                     <p style="color:red"> Touch a subject to view the grades and the assignments due</p>
                     <li data-theme="c">
-                        <a href="#andy-algebra" data-transition="slide">
+                        <a href="#andy-algebra" style="font-size: 26px;">
                             Algebra
                         </a>
                     </li>
                     <li data-theme="c">
-                        <a href="#andy-physics" data-transition="slide">
+                        <a href="#andy-physics" style="font-size: 26px;">
                             Physics
                         </a>
                     </li>
                     <li data-theme="c">
-                        <a href="#andy-subjects" data-transition="slide">
+                        <a href="#andy-subjects" style="font-size: 26px;">
                             English
                         </a>
                     </li>
                     <li data-theme="c">
-                        <a href="#andy-subjects" data-transition="slide">
+                        <a href="#andy-subjects" style="font-size: 26px;">
                             History
                         </a>
                     </li>
                     <li data-theme="c">
-                        <a href="#andy-subjects" data-transition="slide">
+                        <a href="#andy-subjects" style="font-size: 26px;">
                             Social Studies
                         </a>
                     </li>
                     <li data-theme="c">
-                        <a href="#andy-subjects" data-transition="slide">
+                        <a href="#andy-subjects" style="font-size: 26px;">
                             Spanish
                         </a>
                     </li>
@@ -358,24 +358,24 @@
                 </div>
                 <div data-role="collapsible-set" data-theme="" data-content-theme="">
                     <div data-role="collapsible" data-collapsed="true">
-                        <h3>
+                        <h3 style="font-size: 26px;">
                             Grade
                         </h3>
                         <p>
                             <ul data-role="listview">
-                                <li>Overall Grade:  <em style="color:red">'C'</em></li>
+                                <li style="font-size: 26px;">Overall Grade:  <em style="color:red">C</em></li>
                             </ul>
                         </p>
                     </div>
                 </div>
                 <div data-role="collapsible-set" data-theme="" data-content-theme="">
                     <div data-role="collapsible" data-collapsed="true">
-                        <h3>
+                        <h3 style="font-size: 26px;">
                             Assignments
                         </h3>
                         <p>
                 <ul data-role="listview">
-                    <li>Assignment #3 due !:
+                    <li style="font-size: 26px;">Assignment #3 due !:
                         <a href="#worksheet"> 
                             <em style="color:red">View assignment</em>
                         </a>
